<resources>

    <!-- App Name-->
    <string name="app_name">Fortune</string>

    <!-- Authentication -->
    <string name="authentication_request_message">Authenticate to continue</string>

    <!-- General -->
    <string name="balance_text">Balance</string>
    <string name="value_text">Value</string>
    <string name="positive_text">Positive</string>
    <string name="negative_text">Negative</string>
    <string name="name_text">Name</string>
    <string name="type_text">Type</string>
    <string name="category_text">Category</string>
    <string name="description_text">Description</string>
    <string name="date_text">Date</string>

    <!-- Navigation Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- Header -->
    <string name="nav_header_title">Fortune</string>
    <string name="nav_header_subtitle">Your Finance Manager</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Top Bar -->
    <string name="action_filter">Filter</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- About Section -->
    <string name="about_version_text">Version %s</string>
    <string name="about_owner_text">Developed and maintained by Gustavo Celani</string>
    <string name="about_owner_github_text">github.com/gustavocelani</string>

    <!-- Transactions Operations -->
    <string name="transaction_text">Transaction</string>
    <string name="expense_text">Expense</string>
    <string name="revenue_text">Revenue</string>

    <!-- Accounts Activity -->
    <string name="account_is_investment">Add to Investment Group</string>
    <string name="account_is_available">Add to Available Group</string>
    <string name="account_is_total">Add to Total Group</string>
    <string name="account_name_hint">My Favorite Bank</string>
    <string name="account_delete_confirm_title">Delete Account</string>
    <string name="account_invalid">Invalid Account</string>
    <string name="account_explanation_text">You can create as many accounts as you want\nAn account can be considered any means that you use to store your income</string>
    <string-array name="account_types">
        <item>Money</item>
        <item>Current Account</item>
        <item>Savings</item>
        <item>Low Risk Application</item>
        <item>High Risk Application</item>
        <item>General Investment</item>
        <item>Other</item>
    </string-array>

    <!-- Patterns -->
    <string name="money_pattern">%.2f</string>
    <string name="money_real_pattern">R$ %s</string>
    <string name="date_pattern">%02d/%02d/%04d</string>

    <!-- Empty Messages -->
    <string name="empty_accounts_message">Create your first account!\nStart to manage your finances!</string>

    <!-- Confirmation Messages -->
    <string name="ok_text">OK</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="confirm_question">\nAre you sure?</string>
    <string name="invalid_data_message">\nPlease, confirm the input fields info</string>

    <!-- Settings Fragment -->
    <string name="settings_language">Language</string>
    <string name="settings_authenticate">Request Authentication</string>
    <string name="settings_explanation_text">Your choices will be persistent automatically</string>
    <string-array name="languages">
        <item>English</item>
        <item>Portuguese</item>
    </string-array>

    <!-- Transactions Activity -->
    <string name="empty_accounts">You need more accounts!</string>
    <string name="transaction_explanation_text">Perform transactions between your accounts</string>

</resources>
