<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/green"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/title"
        android:layout_toRightOf="@id/icon"
        android:layout_width="match_parent"
        android:layout_height="36dp"

        android:layout_above="@id/slogan"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:textSize="@dimen/mid_text_size"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_toEndOf="@id/icon"
        android:layout_marginStart="@dimen/default_horizontal_margin" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_toRightOf="@id/icon"
        android:layout_alignBottom="@id/icon"
        android:text="@string/nav_header_subtitle"
        android:layout_toEndOf="@id/icon"
        android:layout_marginStart="@dimen/default_horizontal_margin" />

</RelativeLayout>
