<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_horizontal_margin"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/language_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_row_height"
        android:text="@string/settings_language"
        android:textSize="@dimen/mid_text_size"
        android:gravity="center"
        android:textColor="@color/light_gray"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/default_vertical_margin"
        tools:ignore="RelativeOverlap" />
    <Spinner
        android:id="@+id/settings_language_spinner"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_height="@dimen/settings_row_height"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:textSize="@dimen/mid_text_size"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:gravity="center"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/authenticate_text"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_row_height"
        android:text="@string/settings_authenticate"
        android:textSize="@dimen/mid_text_size"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/light_gray"
        android:layout_below="@+id/settings_language_spinner"
        android:layout_marginTop="@dimen/default_vertical_margin"
        tools:ignore="MissingConstraints" />
    <Switch
        android:id="@+id/settings_authenticate_switch"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_height="@dimen/settings_row_height"
        android:layout_below="@id/settings_language_spinner"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:textSize="@dimen/mid_text_size"
        android:layout_marginBottom="@dimen/default_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settings_explanation_text"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/authenticate_text"
        android:textColor="@color/light_gray"
        android:layout_margin="@dimen/default_horizontal_margin"
        tools:ignore="MissingConstraints" />

</RelativeLayout>
